<resources>
    <string name="app_name">Fitrova Fitness Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="wait_message">Waiting...</string>
    <string name="success">Sucess</string>
    <string name="failed">Failed</string>
    <string name="choose_image">Choose Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="email">Email</string>
    <string name="full_name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">C. Ronaldo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="confirm">Confirm</string>
    <string name="access">Access</string>
    <string name="frv">FRV</string>
    <string name="finish">Finish</string>

    <string name="saving_image">Saving Image</string>
    <string name="preparing_card">Preparing Card</string>
    <string name="no_storage_card">No Storage Card</string>
    <string name="not_enough_space">Not Enough Space</string>
</resources>
